@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * No longer attempt naive interpretation of Phone Numbers (M. Redinger)
+
 1.111982  2011-07-17 16:48:37 Europe/London
 
   * Need to re-release to fix botched deps
